deploy: d2f10bf1b75ec15f43316f2f3f2456f7739211e0

--- a/modules.html
+++ b/modules.html
@@ -28,6 +28,7 @@
 <a href="classes/RFTransmitterObject.html" class="tsd-index-link tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>RFTransmitter<wbr/>Object</span></a>
 <a href="classes/RelativeRSSIProcessing.html" class="tsd-index-link tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>RelativeRSSIProcessing</span></a>
 <a href="classes/WLANObject.html" class="tsd-index-link tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>WLANObject</span></a>
+<a href="classes/iBeaconObject.html" class="tsd-index-link tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>i<wbr/>Beacon<wbr/>Object</span></a>
 </div></section>
 <section class="tsd-index-section">
 <h3 class="tsd-index-heading">Classes - Position</h3>
@@ -71,6 +72,7 @@
 <li class="tsd-kind-class"><a href="classes/RelativeRSSI.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>RelativeRSSI</a></li>
 <li class="tsd-kind-class"><a href="classes/RelativeRSSIProcessing.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>RelativeRSSIProcessing</a></li>
 <li class="tsd-kind-class"><a href="classes/WLANObject.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>WLANObject</a></li>
+<li class="tsd-kind-class"><a href="classes/iBeaconObject.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg>i<wbr/>Beacon<wbr/>Object</a></li>
 <li class="tsd-kind-interface"><a href="interfaces/RFObject.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>RFObject</a></li>
 <li class="tsd-kind-interface"><a href="interfaces/RelativeRSSIOptions.html" class="tsd-index-link"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-256-path"></use><use href="#icon-256-text"></use></svg>RelativeRSSIOptions</a></li></ul></nav></div></div>
 <div class="overlay"></div><script src="assets/main.js"></script></body></html>
