--- a/classes/BLEBeaconObject.html
+++ b/classes/BLEBeaconObject.html
@@ -22,7 +22,7 @@
 <ul class="tsd-hierarchy">
 <li><a href="iBeaconObject.html" class="tsd-signature-type" data-tsd-kind="Class">iBeaconObject</a></li></ul></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEBeaconObject.ts#L5">src/data/BLEBeaconObject.ts:5</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEBeaconObject.ts#L6">src/data/BLEBeaconObject.ts:6</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -73,17 +73,19 @@
 <section class="tsd-panel tsd-member tsd-kind-constructor tsd-parent-kind-class"><a id="constructor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>constructor</span><a href="#constructor" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none" id="icon-anchor-a"></path><path d="M10 14a3.5 3.5 0 0 0 5 0l4 -4a3.5 3.5 0 0 0 -5 -5l-.5 .5" id="icon-anchor-b"></path><path d="M14 10a3.5 3.5 0 0 0 -5 0l-4 4a3.5 3.5 0 0 0 5 5l.5 -.5" id="icon-anchor-c"></path></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-constructor tsd-parent-kind-class">
-<li class="tsd-signature tsd-anchor-link" id="constructor.new_BLEBeaconObject">new BLEBeacon<wbr/>Object<span class="tsd-signature-symbol">(</span>manufacturerData<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEBeaconObject.html" class="tsd-signature-type" data-tsd-kind="Class">BLEBeaconObject</a><a href="#constructor.new_BLEBeaconObject" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
+<li class="tsd-signature tsd-anchor-link" id="constructor.new_BLEBeaconObject">new BLEBeacon<wbr/>Object<span class="tsd-signature-symbol">(</span>address<span class="tsd-signature-symbol">?: </span><a href="MACAddress.html" class="tsd-signature-type" data-tsd-kind="Class">MACAddress</a>, manufacturerData<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">Buffer</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEBeaconObject.html" class="tsd-signature-type" data-tsd-kind="Class">BLEBeaconObject</a><a href="#constructor.new_BLEBeaconObject" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
 <h4 class="tsd-parameters-title">Parameters</h4>
 <ul class="tsd-parameter-list">
 <li>
+<h5><code class="tsd-tag ts-flagOptional">Optional</code> address: <a href="MACAddress.html" class="tsd-signature-type" data-tsd-kind="Class">MACAddress</a></h5></li>
+<li>
 <h5><code class="tsd-tag ts-flagOptional">Optional</code> manufacturerData: <span class="tsd-signature-type">Buffer</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEBeaconObject.html" class="tsd-signature-type" data-tsd-kind="Class">BLEBeaconObject</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEBeaconObject.ts#L6">src/data/BLEBeaconObject.ts:6</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEBeaconObject.ts#L7">src/data/BLEBeaconObject.ts:7</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="address" class="tsd-anchor"></a>
@@ -93,13 +95,13 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#address">address</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L28">src/data/BLEObject.ts:28</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L28">src/data/BLEObject.ts:28</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="appearance" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>appearance</span><a href="#appearance" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">appearance<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#appearance">appearance</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L40">src/data/BLEObject.ts:40</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L40">src/data/BLEObject.ts:40</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="createdTimestamp" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>created<wbr/>Timestamp</span><a href="#createdTimestamp" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">created<wbr/>Timestamp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
@@ -123,7 +125,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#frequency">frequency</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L17">src/data/RFTransmitterObject.ts:17</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L17">src/data/RFTransmitterObject.ts:17</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="knownAddresses" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>known<wbr/>Addresses</span><a href="#knownAddresses" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">known<wbr/>Addresses<span class="tsd-signature-symbol">:</span> <a href="MACAddress.html" class="tsd-signature-type" data-tsd-kind="Class">MACAddress</a><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = []</span></div>
@@ -131,19 +133,19 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#knownAddresses">knownAddresses</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L34">src/data/BLEObject.ts:34</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L34">src/data/BLEObject.ts:34</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="manufacturerData" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>manufacturer<wbr/>Data</span><a href="#manufacturerData" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">manufacturer<wbr/>Data<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">Buffer</span></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#manufacturerData">manufacturerData</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L22">src/data/BLEObject.ts:22</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L22">src/data/BLEObject.ts:22</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="mtu" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagOptional">Optional</code> <span>mtu</span><a href="#mtu" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">mtu<span class="tsd-signature-symbol">?:</span> <span class="tsd-signature-type">number</span></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#mtu">mtu</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L37">src/data/BLEObject.ts:37</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L37">src/data/BLEObject.ts:37</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="parentUID" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>parentUID</span><a href="#parentUID" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">parentUID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
@@ -157,7 +159,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#services">services</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/BLEObject.ts#L46">src/data/BLEObject.ts:46</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/BLEObject.ts#L46">src/data/BLEObject.ts:46</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited"><a id="txPower" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>tx<wbr/>Power</span><a href="#txPower" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">tx<wbr/>Power<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
@@ -165,7 +167,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEObject.html">BLEObject</a>.<a href="BLEObject.html#txPower">txPower</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L10">src/data/RFTransmitterObject.ts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L10">src/data/RFTransmitterObject.ts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="uid" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>uid</span><a href="#uid" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">uid<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -190,7 +192,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4><aside class="tsd-sources">
 <p>Inherited from BLEObject.calibratedRSSI</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L30">src/data/RFTransmitterObject.ts:30</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L30">src/data/RFTransmitterObject.ts:30</a></li></ul></aside></li>
 <li class="tsd-signature" id="calibratedRSSI.calibratedRSSI-2"><span class="tsd-signature-symbol">set</span> calibratedRSSI<span class="tsd-signature-symbol">(</span>calibratedRSSI<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Set the calibrated rssi at 1 meter</p>
@@ -205,7 +207,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <p>Inherited from BLEObject.calibratedRSSI</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L40">src/data/RFTransmitterObject.ts:40</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L40">src/data/RFTransmitterObject.ts:40</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited"><a id="environmentFactor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>environment<wbr/>Factor</span><a href="#environmentFactor" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited">
@@ -219,7 +221,7 @@ Nodes such as <a href="RelativeRSSIProcessing.html">RelativeRSSIProcessing</a> c
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4><aside class="tsd-sources">
 <p>Inherited from BLEObject.environmentFactor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L53">src/data/RFTransmitterObject.ts:53</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L53">src/data/RFTransmitterObject.ts:53</a></li></ul></aside></li>
 <li class="tsd-signature" id="environmentFactor.environmentFactor-2"><span class="tsd-signature-symbol">set</span> environmentFactor<span class="tsd-signature-symbol">(</span>environmentFactor<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
@@ -230,7 +232,7 @@ Nodes such as <a href="RelativeRSSIProcessing.html">RelativeRSSIProcessing</a> c
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <p>Inherited from BLEObject.environmentFactor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d2f10bf/src/data/RFTransmitterObject.ts#L58">src/data/RFTransmitterObject.ts:58</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/0bc72d7/src/data/RFTransmitterObject.ts#L58">src/data/RFTransmitterObject.ts:58</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="position" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>position</span><a href="#position" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited tsd-is-external">
