--- a/classes/WLANObject.html
+++ b/classes/WLANObject.html
@@ -22,7 +22,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">WLANObject</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/WLANObject.ts#L5">src/data/WLANObject.ts:5</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/WLANObject.ts#L5">src/data/WLANObject.ts:5</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -83,21 +83,21 @@
 <h4 class="tsd-returns-title">Returns <a href="WLANObject.html" class="tsd-signature-type" data-tsd-kind="Class">WLANObject</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="RFTransmitterObject.html">RFTransmitterObject</a>.<a href="RFTransmitterObject.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L19">src/data/RFTransmitterObject.ts:19</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L19">src/data/RFTransmitterObject.ts:19</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="capabilities" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>capabilities</span><a href="#capabilities" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">capabilities<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/WLANObject.ts#L12">src/data/WLANObject.ts:12</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/WLANObject.ts#L12">src/data/WLANObject.ts:12</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class"><a id="channel" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>channel</span><a href="#channel" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">channel<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 <div class="tsd-comment tsd-typography"><p>WLAN Channel</p>
 </div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/WLANObject.ts#L10">src/data/WLANObject.ts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/WLANObject.ts#L10">src/data/WLANObject.ts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="createdTimestamp" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>created<wbr/>Timestamp</span><a href="#createdTimestamp" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">created<wbr/>Timestamp<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
@@ -121,7 +121,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RFTransmitterObject.html">RFTransmitterObject</a>.<a href="RFTransmitterObject.html#frequency">frequency</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L17">src/data/RFTransmitterObject.ts:17</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L17">src/data/RFTransmitterObject.ts:17</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="parentUID" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>parentUID</span><a href="#parentUID" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">parentUID<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div><aside class="tsd-sources">
@@ -135,7 +135,7 @@
 </div><aside class="tsd-sources">
 <p>Inherited from <a href="RFTransmitterObject.html">RFTransmitterObject</a>.<a href="RFTransmitterObject.html#txPower">txPower</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L10">src/data/RFTransmitterObject.ts:10</a></li></ul></aside></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L10">src/data/RFTransmitterObject.ts:10</a></li></ul></aside></section>
 <section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="uid" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>uid</span><a href="#uid" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <div class="tsd-signature">uid<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
@@ -160,7 +160,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4><aside class="tsd-sources">
 <p>Inherited from RFTransmitterObject.calibratedRSSI</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L30">src/data/RFTransmitterObject.ts:30</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L30">src/data/RFTransmitterObject.ts:30</a></li></ul></aside></li>
 <li class="tsd-signature" id="calibratedRSSI.calibratedRSSI-2"><span class="tsd-signature-symbol">set</span> calibratedRSSI<span class="tsd-signature-symbol">(</span>calibratedRSSI<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 <li class="tsd-description">
 <div class="tsd-comment tsd-typography"><p>Set the calibrated rssi at 1 meter</p>
@@ -175,7 +175,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <p>Inherited from RFTransmitterObject.calibratedRSSI</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L40">src/data/RFTransmitterObject.ts:40</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L40">src/data/RFTransmitterObject.ts:40</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited"><a id="environmentFactor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>environment<wbr/>Factor</span><a href="#environmentFactor" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited">
@@ -189,7 +189,7 @@ Nodes such as [[RelativeRSSIProcessing]] can override this.</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">number</span></h4><aside class="tsd-sources">
 <p>Inherited from RFTransmitterObject.environmentFactor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L53">src/data/RFTransmitterObject.ts:53</a></li></ul></aside></li>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L53">src/data/RFTransmitterObject.ts:53</a></li></ul></aside></li>
 <li class="tsd-signature" id="environmentFactor.environmentFactor-2"><span class="tsd-signature-symbol">set</span> environmentFactor<span class="tsd-signature-symbol">(</span>environmentFactor<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span></li>
 <li class="tsd-description">
 <div class="tsd-parameters">
@@ -200,7 +200,7 @@ Nodes such as [[RelativeRSSIProcessing]] can override this.</p>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4><aside class="tsd-sources">
 <p>Inherited from RFTransmitterObject.environmentFactor</p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/d9e579f/src/data/RFTransmitterObject.ts#L58">src/data/RFTransmitterObject.ts:58</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/6cde8fa/src/data/RFTransmitterObject.ts#L58">src/data/RFTransmitterObject.ts:58</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited tsd-is-external"><a id="position" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>position</span><a href="#position" aria-label="Permalink" class="tsd-anchor-icon"><svg class="icon icon-tabler icon-tabler-link" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><use href="#icon-anchor-a"></use><use href="#icon-anchor-b"></use><use href="#icon-anchor-c"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-kind-accessor tsd-parent-kind-class tsd-is-inherited tsd-is-external">
@@ -512,6 +512,9 @@ relative to the global reference space</p>
 <li><a href="../enums/PropagationModel.html" class="tsd-kind-enum"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-enum)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-8-path"></rect><path d="M9.45 16V7.24H14.49V8.224H10.518V10.936H14.07V11.908H10.518V15.016H14.49V16H9.45Z" fill="var(--color-text)" id="icon-8-text"></path></svg><span>Propagation<wbr/>Model</span></a></li>
 <li><a href="BLEAltBeacon.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><rect fill="var(--color-icon-background)" stroke="var(--color-ts-class)" stroke-width="1.5" x="1" y="1" width="22" height="22" rx="6" id="icon-128-path"></rect><path d="M11.898 16.1201C11.098 16.1201 10.466 15.8961 10.002 15.4481C9.53803 15.0001 9.30603 14.3841 9.30603 13.6001V9.64012C9.30603 8.85612 9.53803 8.24012 10.002 7.79212C10.466 7.34412 11.098 7.12012 11.898 7.12012C12.682 7.12012 13.306 7.34812 13.77 7.80412C14.234 8.25212 14.466 8.86412 14.466 9.64012H13.386C13.386 9.14412 13.254 8.76412 12.99 8.50012C12.734 8.22812 12.37 8.09212 11.898 8.09212C11.426 8.09212 11.054 8.22412 10.782 8.48812C10.518 8.75212 10.386 9.13212 10.386 9.62812V13.6001C10.386 14.0961 10.518 14.4801 10.782 14.7521C11.054 15.0161 11.426 15.1481 11.898 15.1481C12.37 15.1481 12.734 15.0161 12.99 14.7521C13.254 14.4801 13.386 14.0961 13.386 13.6001H14.466C14.466 14.3761 14.234 14.9921 13.77 15.4481C13.306 15.8961 12.682 16.1201 11.898 16.1201Z" fill="var(--color-text)" id="icon-128-text"></path></svg><span>BLEAlt<wbr/>Beacon</span></a></li>
 <li><a href="BLEBeaconObject.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEBeacon<wbr/>Object</span></a></li>
+<li><a href="BLEEddystone.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEEddystone</span></a></li>
+<li><a href="BLEEddystoneUID.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEEddystoneUID</span></a></li>
+<li><a href="BLEEddystoneURL.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEEddystoneURL</span></a></li>
 <li><a href="BLEObject.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEObject</span></a></li>
 <li><a href="BLEService.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEService</span></a></li>
 <li><a href="BLEUUID.html" class="tsd-kind-class"><svg class="tsd-kind-icon" width="24" height="24" viewBox="0 0 24 24"><use href="#icon-128-path"></use><use href="#icon-128-text"></use></svg><span>BLEUUID</span></a></li>
