--- a/classes/RFDataFrame.html
+++ b/classes/RFDataFrame.html
@@ -22,7 +22,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">RFDataFrame</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/916c8d9/src/data/RFDataFrame.ts#L6">src/data/RFDataFrame.ts:6</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/38034c5/src/data/RFDataFrame.ts#L6">src/data/RFDataFrame.ts:6</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -48,6 +48,7 @@
 <a href="RFDataFrame.html#addReferenceSpace" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>Reference<wbr/>Space</span></a>
 <a href="RFDataFrame.html#addRelativeRSSI" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>RelativeRSSI</span></a>
 <a href="RFDataFrame.html#addSensor" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>Sensor</span></a>
+<a href="RFDataFrame.html#clearObjects" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>clear<wbr/>Objects</span></a>
 <a href="RFDataFrame.html#clone" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>clone</span></a>
 <a href="RFDataFrame.html#getObjectByUID" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>get<wbr/>Object<wbr/>ByUID</span></a>
 <a href="RFDataFrame.html#getObjects" class="tsd-index-link tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>get<wbr/>Objects</span></a>
@@ -214,7 +215,7 @@
 <h5><span class="tsd-kind-parameter">rssi</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/916c8d9/src/data/RFDataFrame.ts#L7">src/data/RFDataFrame.ts:7</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/38034c5/src/data/RFDataFrame.ts#L7">src/data/RFDataFrame.ts:7</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="addSensor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>add<wbr/>Sensor</span><a href="#addSensor" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -236,6 +237,18 @@
 <p>Inherited from DataFrame.addSensor</p>
 <ul>
 <li>Defined in node_modules/@openhps/core/dist/types/data/DataFrame.d.ts:116</li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="clearObjects" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>clear<wbr/>Objects</span><a href="#clearObjects" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures tsd-is-inherited tsd-is-external">
+<li class="tsd-signature tsd-anchor-link" id="clearObjects.clearObjects-1"><span class="tsd-kind-call-signature">clear<wbr/>Objects</span><span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">void</span><a href="#clearObjects.clearObjects-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-comment tsd-typography"><p>Clear all objects</p>
+</div>
+<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
+<div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
+<p>Inherited from DataFrame.clearObjects</p>
+<ul>
+<li>Defined in node_modules/@openhps/core/dist/types/data/DataFrame.d.ts:133</li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="clone" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>clone</span><a href="#clone" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -248,7 +261,7 @@
 <div class="tsd-comment tsd-typography"></div><aside class="tsd-sources">
 <p>Inherited from DataFrame.clone</p>
 <ul>
-<li>Defined in node_modules/@openhps/core/dist/types/data/DataFrame.d.ts:135</li></ul></aside></li></ul></section>
+<li>Defined in node_modules/@openhps/core/dist/types/data/DataFrame.d.ts:139</li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited tsd-is-external"><a id="getObjectByUID" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>get<wbr/>Object<wbr/>ByUID</span><a href="#getObjectByUID" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited tsd-is-external">
@@ -417,6 +430,7 @@
 <li><a href="#addReferenceSpace" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>Reference<wbr/>Space</span></a></li>
 <li><a href="#addRelativeRSSI" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>RelativeRSSI</span></a></li>
 <li><a href="#addSensor" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>add<wbr/>Sensor</span></a></li>
+<li><a href="#clearObjects" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>clear<wbr/>Objects</span></a></li>
 <li><a href="#clone" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>clone</span></a></li>
 <li><a href="#getObjectByUID" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>get<wbr/>Object<wbr/>ByUID</span></a></li>
 <li><a href="#getObjects" class="tsd-is-inherited tsd-is-external"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>get<wbr/>Objects</span></a></li>
