--- a/classes/BLEBeaconBuilder.html
+++ b/classes/BLEBeaconBuilder.html
@@ -34,7 +34,7 @@
 <li><a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></li>
 <li><a href="BLEEddystoneURLBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneURLBuilder</a></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L27">src/data/BLEBeaconObject.ts:27</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L27">src/data/BLEBeaconObject.ts:27</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -52,6 +52,8 @@
 <h3 class="tsd-index-heading">Methods</h3>
 <div class="tsd-index-list"><a href="BLEBeaconBuilder.html#build" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a>
 <a href="BLEBeaconBuilder.html#calibratedRSSI" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a>
+<a href="BLEBeaconBuilder.html#displayName" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a>
+<a href="BLEBeaconBuilder.html#macAddress" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a>
 </div></section></div></details></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Constructors</h2>
@@ -72,7 +74,7 @@
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagProtected">Protected</code> <span>beacon</span><a href="#beacon" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <div class="tsd-signature"><span class="tsd-kind-property">beacon</span><span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type tsd-kind-type-parameter">B</span></div><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="build" class="tsd-anchor"></a>
@@ -82,7 +84,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L51">src/data/BLEBeaconObject.ts:51</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="calibratedRSSI" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>calibratedRSSI</span><a href="#calibratedRSSI" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -95,7 +97,43 @@
 <h5><span class="tsd-kind-parameter">rssi</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L46">src/data/BLEBeaconObject.ts:46</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member"><a id="displayName" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>display<wbr/>Name</span><a href="#displayName" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures">
+<li class="tsd-signature tsd-anchor-link" id="displayName.displayName-1"><span class="tsd-kind-call-signature">display<wbr/>Name</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">name</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span><a href="#displayName.displayName-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">name</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member"><a id="macAddress" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>mac<wbr/>Address</span><a href="#macAddress" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures">
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-1"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span><a href="#macAddress.macAddress-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-2"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span><a href="#macAddress.macAddress-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <a href="MACAddress.html" class="tsd-signature-type tsd-kind-class">MACAddress</a></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEBeaconBuilder</a><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type tsd-kind-type-parameter">B</span><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -117,7 +155,9 @@
 <li><a href="#constructor" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-512"></use></svg><span>constructor</span></a></li>
 <li><a href="#beacon" class="tsd-is-protected"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>beacon</span></a></li>
 <li><a href="#build" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a></li>
-<li><a href="#calibratedRSSI" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a></li></ul></div></details></div>
+<li><a href="#calibratedRSSI" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a></li>
+<li><a href="#displayName" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a></li>
+<li><a href="#macAddress" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a></li></ul></div></details></div>
 <div class="site-menu">
 <nav class="tsd-navigation"><a href="../modules.html"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1"></use></svg><span>@openhps/rf</span></a>
 <ul class="tsd-small-nested-navigation" id="tsd-nav-container" data-base="..">
