--- a/classes/BLEEddystoneUIDBuilder.html
+++ b/classes/BLEEddystoneUIDBuilder.html
@@ -26,7 +26,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">BLEEddystoneUIDBuilder</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L54">src/data/BLEEddystoneUID.ts:54</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L54">src/data/BLEEddystoneUID.ts:54</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -44,7 +44,9 @@
 <h3 class="tsd-index-heading">Methods</h3>
 <div class="tsd-index-list"><a href="BLEEddystoneUIDBuilder.html#build" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a>
 <a href="BLEEddystoneUIDBuilder.html#calibratedRSSI" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a>
+<a href="BLEEddystoneUIDBuilder.html#displayName" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a>
 <a href="BLEEddystoneUIDBuilder.html#instanceId" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>instance<wbr/>Id</span></a>
+<a href="BLEEddystoneUIDBuilder.html#macAddress" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a>
 <a href="BLEEddystoneUIDBuilder.html#namespaceId" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>namespace<wbr/>Id</span></a>
 <a href="BLEEddystoneUIDBuilder.html#create" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a>
 </div></section></div></details></section></section>
@@ -58,7 +60,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L55">src/data/BLEEddystoneUID.ts:55</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L55">src/data/BLEEddystoneUID.ts:55</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-protected tsd-is-inherited"><a id="beacon" class="tsd-anchor"></a>
@@ -66,7 +68,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">beacon</span><span class="tsd-signature-symbol">:</span> <a href="BLEEddystoneUID.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUID</a></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#beacon">beacon</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="build" class="tsd-anchor"></a>
@@ -77,7 +79,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="BLEEddystoneUID.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUID</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#build">build</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L79">src/data/BLEEddystoneUID.ts:79</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L79">src/data/BLEEddystoneUID.ts:79</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="calibratedRSSI" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>calibratedRSSI</span><a href="#calibratedRSSI" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -91,7 +93,21 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#calibratedRSSI">calibratedRSSI</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L74">src/data/BLEEddystoneUID.ts:74</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L74">src/data/BLEEddystoneUID.ts:74</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member tsd-is-inherited"><a id="displayName" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>display<wbr/>Name</span><a href="#displayName" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures tsd-is-inherited">
+<li class="tsd-signature tsd-anchor-link" id="displayName.displayName-1"><span class="tsd-kind-call-signature">display<wbr/>Name</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">name</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a><a href="#displayName.displayName-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">name</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#displayName">displayName</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="instanceId" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>instance<wbr/>Id</span><a href="#instanceId" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -104,7 +120,32 @@
 <h5><span class="tsd-kind-parameter">instanceId</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L69">src/data/BLEEddystoneUID.ts:69</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L69">src/data/BLEEddystoneUID.ts:69</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member tsd-is-inherited"><a id="macAddress" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>mac<wbr/>Address</span><a href="#macAddress" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures tsd-is-inherited">
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-1"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a><a href="#macAddress.macAddress-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-2"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a><a href="#macAddress.macAddress-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <a href="MACAddress.html" class="tsd-signature-type tsd-kind-class">MACAddress</a></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="namespaceId" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>namespace<wbr/>Id</span><a href="#namespaceId" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -117,7 +158,7 @@
 <h5><span class="tsd-kind-parameter">namespaceId</span>: <a href="BLEUUID.html" class="tsd-signature-type tsd-kind-class">BLEUUID</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L64">src/data/BLEEddystoneUID.ts:64</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L64">src/data/BLEEddystoneUID.ts:64</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="create" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>create</span><a href="#create" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -125,7 +166,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <a href="BLEEddystoneUIDBuilder.html" class="tsd-signature-type tsd-kind-class">BLEEddystoneUIDBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEEddystoneUID.ts#L60">src/data/BLEEddystoneUID.ts:60</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEEddystoneUID.ts#L60">src/data/BLEEddystoneUID.ts:60</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -148,7 +189,9 @@
 <li><a href="#beacon" class="tsd-is-protected tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>beacon</span></a></li>
 <li><a href="#build" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a></li>
 <li><a href="#calibratedRSSI" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a></li>
+<li><a href="#displayName" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a></li>
 <li><a href="#instanceId" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>instance<wbr/>Id</span></a></li>
+<li><a href="#macAddress" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a></li>
 <li><a href="#namespaceId" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>namespace<wbr/>Id</span></a></li>
 <li><a href="#create" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>create</span></a></li></ul></div></details></div>
 <div class="site-menu">
