--- a/classes/BLEiBeaconBuilder.html
+++ b/classes/BLEiBeaconBuilder.html
@@ -26,7 +26,7 @@
 <ul class="tsd-hierarchy">
 <li><span class="target">BLEiBeaconBuilder</span></li></ul></li></ul></section><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L69">src/data/BLEiBeacon.ts:69</a></li></ul></aside>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L69">src/data/BLEiBeacon.ts:69</a></li></ul></aside>
 <section class="tsd-panel-group tsd-index-group">
 <section class="tsd-panel tsd-index-panel">
 <details class="tsd-index-content tsd-index-accordion" open><summary class="tsd-accordion-summary tsd-index-summary">
@@ -44,6 +44,8 @@
 <h3 class="tsd-index-heading">Methods</h3>
 <div class="tsd-index-list"><a href="BLEiBeaconBuilder.html#build" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a>
 <a href="BLEiBeaconBuilder.html#calibratedRSSI" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a>
+<a href="BLEiBeaconBuilder.html#displayName" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a>
+<a href="BLEiBeaconBuilder.html#macAddress" class="tsd-index-link tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a>
 <a href="BLEiBeaconBuilder.html#major" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>major</span></a>
 <a href="BLEiBeaconBuilder.html#minor" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>minor</span></a>
 <a href="BLEiBeaconBuilder.html#proximityUUID" class="tsd-index-link"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>proximityUUID</span></a>
@@ -59,7 +61,7 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#constructor">constructor</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L70">src/data/BLEiBeacon.ts:70</a></li></ul></aside></li></ul></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L70">src/data/BLEiBeacon.ts:70</a></li></ul></aside></li></ul></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Properties</h2>
 <section class="tsd-panel tsd-member tsd-is-protected tsd-is-inherited"><a id="beacon" class="tsd-anchor"></a>
@@ -67,7 +69,7 @@
 <div class="tsd-signature"><span class="tsd-kind-property">beacon</span><span class="tsd-signature-symbol">:</span> <a href="BLEiBeacon.html" class="tsd-signature-type tsd-kind-class">BLEiBeacon</a></div><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#beacon">beacon</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L28">src/data/BLEBeaconObject.ts:28</a></li></ul></aside></section></section>
 <section class="tsd-panel-group tsd-member-group">
 <h2>Methods</h2>
 <section class="tsd-panel tsd-member"><a id="build" class="tsd-anchor"></a>
@@ -78,7 +80,7 @@
 <h4 class="tsd-returns-title">Returns <span class="tsd-signature-type ">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="BLEiBeacon.html" class="tsd-signature-type tsd-kind-class">BLEiBeacon</a><span class="tsd-signature-symbol">&gt;</span></h4><aside class="tsd-sources">
 <p>Overrides <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#build">build</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L94">src/data/BLEiBeacon.ts:94</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L94">src/data/BLEiBeacon.ts:94</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member tsd-is-inherited"><a id="calibratedRSSI" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>calibratedRSSI</span><a href="#calibratedRSSI" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures tsd-is-inherited">
@@ -92,7 +94,46 @@
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#calibratedRSSI">calibratedRSSI</a></p>
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L46">src/data/BLEBeaconObject.ts:46</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member tsd-is-inherited"><a id="displayName" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>display<wbr/>Name</span><a href="#displayName" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures tsd-is-inherited">
+<li class="tsd-signature tsd-anchor-link" id="displayName.displayName-1"><span class="tsd-kind-call-signature">display<wbr/>Name</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">name</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a><a href="#displayName.displayName-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">name</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#displayName">displayName</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L30">src/data/BLEBeaconObject.ts:30</a></li></ul></aside></li></ul></section>
+<section class="tsd-panel tsd-member tsd-is-inherited"><a id="macAddress" class="tsd-anchor"></a>
+<h3 class="tsd-anchor-link"><span>mac<wbr/>Address</span><a href="#macAddress" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
+<ul class="tsd-signatures tsd-is-inherited">
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-1"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a><a href="#macAddress.macAddress-1" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <span class="tsd-signature-type">string</span></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L35">src/data/BLEBeaconObject.ts:35</a></li></ul></aside></li>
+<li class="tsd-signature tsd-anchor-link" id="macAddress.macAddress-2"><span class="tsd-kind-call-signature">mac<wbr/>Address</span><span class="tsd-signature-symbol">(</span><span class="tsd-kind-parameter">address</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a><a href="#macAddress.macAddress-2" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></li>
+<li class="tsd-description">
+<div class="tsd-parameters">
+<h4 class="tsd-parameters-title">Parameters</h4>
+<ul class="tsd-parameter-list">
+<li>
+<h5><span class="tsd-kind-parameter">address</span>: <a href="MACAddress.html" class="tsd-signature-type tsd-kind-class">MACAddress</a></h5></li></ul></div>
+<h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
+<p>Inherited from <a href="BLEBeaconBuilder.html">BLEBeaconBuilder</a>.<a href="BLEBeaconBuilder.html#macAddress">macAddress</a></p>
+<ul>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEBeaconObject.ts#L36">src/data/BLEBeaconObject.ts:36</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="major" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>major</span><a href="#major" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -105,7 +146,7 @@
 <h5><span class="tsd-kind-parameter">major</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L84">src/data/BLEiBeacon.ts:84</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L84">src/data/BLEiBeacon.ts:84</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="minor" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>minor</span><a href="#minor" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -118,7 +159,7 @@
 <h5><span class="tsd-kind-parameter">minor</span>: <span class="tsd-signature-type">number</span></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L89">src/data/BLEiBeacon.ts:89</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L89">src/data/BLEiBeacon.ts:89</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="proximityUUID" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><span>proximityUUID</span><a href="#proximityUUID" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -131,7 +172,7 @@
 <h5><span class="tsd-kind-parameter">uuid</span>: <a href="BLEUUID.html" class="tsd-signature-type tsd-kind-class">BLEUUID</a></h5></li></ul></div>
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L79">src/data/BLEiBeacon.ts:79</a></li></ul></aside></li></ul></section>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L79">src/data/BLEiBeacon.ts:79</a></li></ul></aside></li></ul></section>
 <section class="tsd-panel tsd-member"><a id="create" class="tsd-anchor"></a>
 <h3 class="tsd-anchor-link"><code class="tsd-tag ts-flagStatic">Static</code> <span>create</span><a href="#create" aria-label="Permalink" class="tsd-anchor-icon"><svg viewBox="0 0 24 24"><use href="#icon-anchor"></use></svg></a></h3>
 <ul class="tsd-signatures">
@@ -139,7 +180,7 @@
 <li class="tsd-description">
 <h4 class="tsd-returns-title">Returns <a href="BLEiBeaconBuilder.html" class="tsd-signature-type tsd-kind-class">BLEiBeaconBuilder</a></h4><aside class="tsd-sources">
 <ul>
-<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/f20d711/src/data/BLEiBeacon.ts#L75">src/data/BLEiBeacon.ts:75</a></li></ul></aside></li></ul></section></section></div>
+<li>Defined in <a href="https://github.com/OpenHPS/openhps-rf/blob/dbcf781/src/data/BLEiBeacon.ts#L75">src/data/BLEiBeacon.ts:75</a></li></ul></aside></li></ul></section></section></div>
 <div class="col-sidebar">
 <div class="page-menu">
 <div class="tsd-navigation settings">
@@ -162,6 +203,8 @@
 <li><a href="#beacon" class="tsd-is-protected tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-1024"></use></svg><span>beacon</span></a></li>
 <li><a href="#build" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>build</span></a></li>
 <li><a href="#calibratedRSSI" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>calibratedRSSI</span></a></li>
+<li><a href="#displayName" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>display<wbr/>Name</span></a></li>
+<li><a href="#macAddress" class="tsd-is-inherited"><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>mac<wbr/>Address</span></a></li>
 <li><a href="#major" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>major</span></a></li>
 <li><a href="#minor" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>minor</span></a></li>
 <li><a href="#proximityUUID" class=""><svg class="tsd-kind-icon" viewBox="0 0 24 24"><use href="#icon-2048"></use></svg><span>proximityUUID</span></a></li>
